--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,16 @@
     }
   ],
   "require": {
-    "php": "^5.6 || ^7.0",
+    "php": "^7.1",
     "lcobucci/jwt": "^3.2.2",
     "league/oauth2-client": "^2.4.1",
     "psr/log": "^1.0",
-    "ramsey/uuid": "^3.0"
+    "ramsey/uuid": "^4.0"
   },
   "require-dev": {
     "bramus/monolog-colored-line-formatter": "^2.0",
     "monolog/monolog": "^1.24",
-    "phpunit/phpunit": "^5.7",
+    "phpunit/phpunit": "^9.0",
     "satooshi/php-coveralls": "^1.0"
   },
   "autoload": {
@@ -39,9 +39,6 @@
     }
   },
   "config": {
-    "platform": {
-      "php": "5.6"
-    },
     "discard-changes": true,
     "sort-packages": true
   },
